1.1.9-final Unreleased
======================

 * Backported fix for http://dev.plone.org/archetypes/ticket/763: The edit
   tab in ZMI should not be displayed for ATImage/ATFile objects.
   [deo]

1.1.8-final 2007-12-02
======================

 * Fixed http://dev.plone.org/plone/ticket/7102: uploading xhtml
   files was not working correctly.  Thanks to lucie for the patch.
   [alecm]

 * Backported fix for http://dev.plone.org/plone/ticket/7221: the validation
   layer for the 'id' field from ATContentTypeSchema isn't being initialized.
   [deo]

1.1.7-final 2007-10-08
======================

 * Fixed issue with quoting of '&' in link urls.
   [reinout]

 * Added validator for for url fields to prevent simple XSS.
   [alecm]

1.1.6-final 2007-05-16
=======================

 * Fix a minor XSS issue resulting from lack of output sanitization on
   the remoteUrl field of ATLink.

1.1.5-final 2007-04-28
======================

 * http://dev.plone.org/plone/ticket/6481: During event post_validate, don't
   attempt to parse the startDate and endDate form fields when validation
   already found errors for them.
   [mj]

 * Adjusted tests to deal with the new default vocabulary for boolean fields.
   [wichert]

 * removed schemata='default' for allowDiscussion field in finalizeATCTSchema.
   It makes no sense and prevents customization by patching.
   [ender]

1.1.4-final 2006-12-18
======================

 * Reenabled editing the names and descriptions of the smart folder indices
   and metadata.
   [alecm]

 * Setting a sort criterion should not prevent search criteria for the same
   field from being set.  Fixes http://dev.plone.org/plone/ticket/5435
   [alecm]

 * ATEvent.setSubject needs to set multiple EventTypes to avoid pruning
   the subject list.  Applied patch from rossp.  Fixes
   http://dev.plone.org/plone/ticket/5770
   [alecm]

 * Add alt attributes to Topic table view type icons.  This closes
   http://dev.plone.org/plone/ticket/5562
   [alecm]
